[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/lpc-office/Coffee Cup.png" type="Texture" id=1]
[ext_resource path="res://item.gd" type="Script" id=2]
[ext_resource path="res://assets/Bottle Break.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 35.3553

[sub_resource type="Animation" id=2]
resource_name = "fall"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ), Vector2( 0, 40 ), Vector2( 0, 60 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 60.0, 120.0 ]
}

[node name="CoffeeCup" type="Area2D"]
position = Vector2( 9.53674e-07, -1.19209e-07 )
rotation = -0.025052
collision_layer = 8
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.760096
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )

[node name="CollectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_item_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_item_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
